--- a/gta.html
+++ b/gta.html
@@ -11,7 +11,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+      <a href="index.html">HOME</a>
       <a href="engcollec.html">ENGLISH POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -41,9 +41,9 @@
             <img src="GTA/GTA (1).jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 1', -1)">-</button>
+                <span id="quantity-GTA 1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GTA 1')">Add to Cart</button>
         </div>
@@ -52,20 +52,20 @@
             <img src="GTA/GTA (2).jpg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 2', -1)">-</button>
+                <span id="quantity-GTA 2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 2', 1)">+</button>
             </div>
-            <button class="add-to-cart" onclick="addToCart('GAT 2')">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('GTA 2')">Add to Cart</button>
         </div>
     
         <div class="card">
             <img src="GTA/GTA (3).jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 3', -1)">-</button>
+                <span id="quantity-GTA 3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GTA 3')">Add to Cart</button>
         </div>
@@ -74,9 +74,9 @@
             <img src="GTA/GTA (4).jpg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 4', -1)">-</button>
+                <span id="quantity-GTA 4" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GTA 4')">Add to Cart</button>
         </div>
@@ -84,9 +84,9 @@
             <img src="GTA/GTA (5).jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 5', -1)">-</button>
+                <span id="quantity-GTA 5" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 5', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GTA 5')">Add to Cart</button>
         </div>
@@ -94,9 +94,9 @@
             <img src="GTA/GTA (6).jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 6', -1)">-</button>
+                <span id="quantity-GTA 6" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 6', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GAT 6')">Add to Cart</button>
         </div>
@@ -104,9 +104,9 @@
             <img src="GTA/GTA (7).jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 7', -1)">-</button>
+                <span id="quantity-GTA 7" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 7', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GTA 7')">Add to Cart</button>
         </div>
@@ -114,9 +114,9 @@
             <img src="GTA/GTA (8).jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 8', -1)">-</button>
+                <span id="quantity-GTA 8" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GTA 8', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GTA 8')">Add to Cart</button>
         </div>   
@@ -125,9 +125,9 @@
         <img src="GTA/GTA (9).jpeg" alt="CUSTOMIZED RED VELVET">
         <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-            <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('GTA 9', -1)">-</button>
+            <span id="quantity-GTA 9" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('GTA 9', 1)">+</button>
         </div>
         <button class="add-to-cart" onclick="addToCart('GTA 9')">Add to Cart</button>
     </div>   
@@ -136,9 +136,9 @@
     <img src="GTA/GTA (10).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 10', -1)">-</button>
+        <span id="quantity-GTA 10" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 10', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 10')">Add to Cart</button>
 </div>   
@@ -147,9 +147,9 @@
     <img src="GTA/GTA (11).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 11', -1)">-</button>
+        <span id="quantity-GTA 11" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 11', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 11')">Add to Cart</button>
 </div>   
@@ -158,9 +158,9 @@
     <img src="GTA/GTA (12).jpeg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 12', -1)">-</button>
+        <span id="quantity-GTA 12" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 12', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 12')">Add to Cart</button>
 </div>   
@@ -169,9 +169,9 @@
     <img src="GTA/GTA (13).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 13', -1)">-</button>
+        <span id="quantity-GTA 13" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 13', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 13')">Add to Cart</button>
 </div>   
@@ -180,9 +180,9 @@
     <img src="GTA/GTA (14).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 14', -1)">-</button>
+        <span id="quantity-GTA 14" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 14', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 14')">Add to Cart</button>
 </div>   
@@ -191,9 +191,9 @@
     <img src="GTA/GTA (15).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 15', -1)">-</button>
+        <span id="quantity-GTA 15" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 15', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 15')">Add to Cart</button>
 </div>   
@@ -202,9 +202,9 @@
     <img src="GTA/GTA (16).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 16', -1)">-</button>
+        <span id="quantity-GTA 16" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 16', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 16')">Add to Cart</button>
 </div>   
@@ -213,9 +213,9 @@
     <img src="GTA/GTA (17).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 17', -1)">-</button>
+        <span id="quantity-GTA 17" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 17', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 17')">Add to Cart</button>
 </div>   
@@ -224,9 +224,9 @@
     <img src="GTA/GTA (18).jpg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 18', -1)">-</button>
+        <span id="quantity-GTA 18" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GTA 18', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GTA 18')">Add to Cart</button>
 </div>   
