--- a/gym.html
+++ b/gym.html
@@ -11,7 +11,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+      <a href="index.html">HOME</a> 
       <a href="engcollec.html">ENGLISH POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -41,9 +41,9 @@
             <img src="GYM/17d16ceb-5a68-4705-ae66-39556ecedd2f.jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 1', -1)">-</button>
+                <span id="quantity-GYM 1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GYM 1')">Add to Cart</button>
         </div>
@@ -52,9 +52,9 @@
             <img src="GYM/ARNOLD.jpg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 2', -1)">-</button>
+                <span id="quantity-GYM 2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 2', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GYM 2')">Add to Cart</button>
         </div>
@@ -63,9 +63,9 @@
             <img src="GYM/CBUM f.jpg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 3', -1)">-</button>
+                <span id="quantity-GYM 3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GYM 3')">Add to Cart</button>
         </div>
@@ -74,9 +74,9 @@
             <img src="GYM/GYM8.jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 4', -1)">-</button>
+                <span id="quantity-GYM 4" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GYM 4')">Add to Cart</button>
         </div>
@@ -84,9 +84,9 @@
             <img src="GYM/GYM9.jpeg" alt="CUSTOMIZED RED VELVET">
             <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-                <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 5', -1)">-</button>
+                <span id="quantity-GYM 5" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('GYM 5', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('GYM 5')">Add to Cart</button>
         </div>
@@ -95,9 +95,9 @@
         <img src="GYM/GYM10.jpeg" alt="CUSTOMIZED RED VELVET">
         <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
         <div class="cart-controls">
-            <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-            <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-            <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+            <button class="quantity-btn" onclick="updateQuantity('GYM 6', -1)">-</button>
+            <span id="quantity-GYM 6" style="color: rgb(6, 6, 6);">1</span>
+            <button class="quantity-btn" onclick="updateQuantity('GYM 6', 1)">+</button>
         </div>
         <button class="add-to-cart" onclick="addToCart('GYM 6')">Add to Cart</button>
     </div>
@@ -107,9 +107,9 @@
     <img src="GYM/GYM11.jpeg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GYM 7', -1)">-</button>
+        <span id="quantity-GYM 7" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GYM 7', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GYM 7')">Add to Cart</button>
 </div>
@@ -118,9 +118,9 @@
     <img src="GYM/GYM12.jpeg" alt="CUSTOMIZED RED VELVET">
     <!-- <h2 style="color: white;">HANUMANKIND <BR>RAPPER FROM INDIA</BR></h2> -->
     <div class="cart-controls">
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', -1)">-</button>
-        <span id="quantity-CUSTOMIZED RED VELVET" style="color: rgb(6, 6, 6);">1</span>
-        <button class="quantity-btn" onclick="updateQuantity('CUSTOMIZED RED VELVET', 1)">+</button>
+        <button class="quantity-btn" onclick="updateQuantity('GYM 8', -1)">-</button>
+        <span id="quantity-GYM 8" style="color: rgb(6, 6, 6);">1</span>
+        <button class="quantity-btn" onclick="updateQuantity('GYM 8', 1)">+</button>
     </div>
     <button class="add-to-cart" onclick="addToCart('GYM 8')">Add to Cart</button>
 </div>
