--- a/CARS.HTML
+++ b/CARS.HTML
@@ -11,7 +11,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+       <a href="index.html">HOME</a> 
       <a href="engcollec.html">ENGLISH POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -32,7 +32,7 @@
       <a href="bts.html">K-POP</a>
       <a href="anime.html">ANIME</a>
     </div>
-    <center><h2 style="font-size:50px; color: white; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">CARS</h2></center>
+    <center><h2 style="font-size:30px; color: white; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">CARS</h2></center>
 
     <div class="card-container">
         <div class="card">
