--- a/quotes.html
+++ b/quotes.html
@@ -11,7 +11,7 @@
 
 
     <div class="side-menu" id="sideMenu">
-      <!-- <a href="#home">Home</a> -->
+      <a href="index.html">HOME</a>
       <a href="engcollec.html">ENGLISH POSTERS</a>
       <a href="tamilactors.html">TAMIL ACTORS</a>
       <a href="avengercollec.html">AVENGERS</a>
@@ -38,9 +38,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (1).jpeg" alt="CUSTOMIZED RED VELVET">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('0abe57fd-e92f-46e4-a738-f5e91d4ccafd', -1)">-</button>
-                <span id="quantity-0abe57fd-e92f-46e4-a738-f5e91d4ccafd" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('0abe57fd-e92f-46e4-a738-f5e91d4ccafd', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 1', -1)">-</button>
+                <span id="quantity-QUOTES 1" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 1', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 1')">Add to Cart</button>
         </div>
@@ -48,9 +48,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (2).jpeg" alt="Poster 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('65dfe1cb-5bac-4312-922b-10afbebcda28', -1)">-</button>
-                <span id="quantity-65dfe1cb-5bac-4312-922b-10afbebcda28" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('65dfe1cb-5bac-4312-922b-10afbebcda28', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 2', -1)">-</button>
+                <span id="quantity-QUOTES 2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 2', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 2')">Add to Cart</button>
         </div>
@@ -58,9 +58,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (3).jpeg" alt="Poster 3">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', -1)">-</button>
-                <span id="quantity-775f4bf4-cb38-4928-8ad9-8cff74d13484" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 3', -1)">-</button>
+                <span id="quantity-QUOTES 3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 3')">Add to Cart</button>
         </div>
@@ -68,9 +68,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (4).jpeg" alt="Poster 9">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', -1)">-</button>
-                <span id="quantity-eae9324b-1ed8-40a2-9157-6cdb3a95288c" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 4', -1)">-</button>
+                <span id="quantity-QUOTES 4" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 4', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 4')">Add to Cart</button>
         </div>
@@ -78,18 +78,18 @@
         <div class="card">
             <img src="QUOTES/QUOTES (5).jpeg" alt="Poster 10">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('Inception', -1)">-</button>
-                <span id="quantity-Inception" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('Inception', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 5', -1)">-</button>
+                <span id="quantity-QUOTES 5" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 5', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 5')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="QUOTES/QUOTES (6).jpeg" alt="FAST & FURIOUS 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', -1)">-</button>
-                <span id="quantity-fast-furious-2" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 6', -1)">-</button>
+                <span id="quantity-QUOTES 6" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 6', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 6')">Add to Cart</button>
         </div>
@@ -97,9 +97,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (7).jpeg" alt="FAST & FURIOUS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious', -1)">-</button>
-                <span id="quantity-fast-furious" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 7', -1)">-</button>
+                <span id="quantity-QUOTES 7" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 7', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 7')">Add to Cart</button>
         </div>
@@ -107,9 +107,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (8).jpeg" alt="GODFATHER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('godfather', -1)">-</button>
-                <span id="quantity-godfather" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('godfather', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 8', -1)">-</button>
+                <span id="quantity-QUOTES 8" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 8', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 8')">Add to Cart</button>
         </div>
@@ -117,9 +117,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (9).jpeg" alt="HANGOVER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('hangover', -1)">-</button>
-                <span id="quantity-hangover" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('hangover', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 9', -1)">-</button>
+                <span id="quantity-QUOTES 9" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 9', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 9')">Add to Cart</button>
         </div>
@@ -127,9 +127,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (10).jpeg" alt="Interstellar">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', -1)">-</button>
-                <span id="quantity-interstellar" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 10', -1)">-</button>
+                <span id="quantity-QUOTES 10" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 10', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 10')">Add to Cart</button>
         </div>
@@ -137,9 +137,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (11).jpeg" alt="JOHN WICK">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', -1)">-</button>
-                <span id="quantity-john-wick" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 11', -1)">-</button>
+                <span id="quantity-QUOTES 11" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 11', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 11')">Add to Cart</button>
         </div>
@@ -147,9 +147,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (12).jpeg" alt="MISSION IMPOSSIBLE">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', -1)">-</button>
-                <span id="quantity-mission-impossible" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 12', -1)">-</button>
+                <span id="quantity-QUOTES 12" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 12', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 12')">Add to Cart</button>
         </div>
@@ -157,9 +157,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (13).jpeg" alt="SHAWSHANK REDEMPTION">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', -1)">-</button>
-                <span id="quantity-shawshank" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 13', -1)">-</button>
+                <span id="quantity-QUOTES 13" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 13', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 13')">Add to Cart</button>
         </div>
@@ -167,9 +167,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (14).jpeg" alt="STRANGER THINGS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', -1)">-</button>
-                <span id="quantity-stranger-things" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 14', -1)">-</button>
+                <span id="quantity-QUOTES 14" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 14', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 14')">Add to Cart</button>
         </div>
@@ -177,9 +177,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (15).jpeg" alt="THE BOYS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', -1)">-</button>
-                <span id="quantity-the-boys" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 15', -1)">-</button>
+                <span id="quantity-QUOTES 15" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 15', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 15')">Add to Cart</button>
         </div>
@@ -187,9 +187,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (16).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 16', -1)">-</button>
+                <span id="quantity-QUOTES 16" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 16', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 16')">Add to Cart</button>
         </div>
@@ -197,9 +197,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (17).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 17', -1)">-</button>
+                <span id="quantity-QUOTES 17" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 17', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 17')">Add to Cart</button>
         </div>
@@ -207,9 +207,9 @@
         <div class="card">
             <img src="QUOTES/QUOTES (18).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 18', -1)">-</button>
+                <span id="quantity-QUOTES 18" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('QUOTES 18', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('QUOTES 18')">Add to Cart</button>
         </div>
