--- a/engartist.html
+++ b/engartist.html
@@ -59,9 +59,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (11).jpeg" alt="Poster 3">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', -1)">-</button>
-                <span id="quantity-775f4bf4-cb38-4928-8ad9-8cff74d13484" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('775f4bf4-cb38-4928-8ad9-8cff74d13484', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 11', -1)">-</button>
+                <span id="quantity-ENG Artist 11" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 11', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 11')">Add to Cart</button>
         </div>
@@ -69,9 +69,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (12).jpeg" alt="Poster 9">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', -1)">-</button>
-                <span id="quantity-eae9324b-1ed8-40a2-9157-6cdb3a95288c" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('eae9324b-1ed8-40a2-9157-6cdb3a95288c', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 12', -1)">-</button>
+                <span id="quantity-ENG Artist 12" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 12', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 12')">Add to Cart</button>
         </div>
@@ -79,18 +79,18 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (13).jpeg" alt="Poster 10">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('Inception', -1)">-</button>
-                <span id="quantity-Inception" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('Inception', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 13', -1)">-</button>
+                <span id="quantity-ENG Artist 13" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 13', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 13')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="ARTIST/ENG ARTIST (14).jpeg" alt="FAST & FURIOUS 2">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', -1)">-</button>
-                <span id="quantity-fast-furious-2" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious-2', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 14', -1)">-</button>
+                <span id="quantity-ENG Artist 14" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 14', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 14')">Add to Cart</button>
         </div>
@@ -98,9 +98,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (15).jpeg" alt="FAST & FURIOUS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious', -1)">-</button>
-                <span id="quantity-fast-furious" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('fast-furious', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 15', -1)">-</button>
+                <span id="quantity-ENG Artist 15" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 15', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 15')">Add to Cart</button>
         </div>
@@ -108,9 +108,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (16).jpeg" alt="GODFATHER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('godfather', -1)">-</button>
-                <span id="quantity-godfather" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('godfather', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 16', -1)">-</button>
+                <span id="quantity-ENG Artist 16" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 16', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 16')">Add to Cart</button>
         </div>
@@ -118,9 +118,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (18).jpeg" alt="HANGOVER">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('hangover', -1)">-</button>
-                <span id="quantity-hangover" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('hangover', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 18', -1)">-</button>
+                <span id="quantity-ENG Artist 18" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 18', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 18')">Add to Cart</button>
         </div>
@@ -128,9 +128,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (17).jpeg" alt="Interstellar">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', -1)">-</button>
-                <span id="quantity-interstellar" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('interstellar', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 17', -1)">-</button>
+                <span id="quantity-ENG Artist 17" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 17', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 17')">Add to Cart</button>
         </div>
@@ -138,9 +138,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (19).jpeg" alt="JOHN WICK">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', -1)">-</button>
-                <span id="quantity-john-wick" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('john-wick', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 19', -1)">-</button>
+                <span id="quantity-ENG Artist 19" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 19', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 19')">Add to Cart</button>
         </div>
@@ -148,9 +148,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (2).jpeg" alt="MISSION IMPOSSIBLE">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', -1)">-</button>
-                <span id="quantity-mission-impossible" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('mission-impossible', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 2', -1)">-</button>
+                <span id="quantity-ENG Artist 2" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 2', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 2')">Add to Cart</button>
         </div>
@@ -158,9 +158,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (20).jpeg" alt="SHAWSHANK REDEMPTION">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', -1)">-</button>
-                <span id="quantity-shawshank" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('shawshank', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 20', -1)">-</button>
+                <span id="quantity-ENG Artist 20" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 20', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 20')">Add to Cart</button>
         </div>
@@ -168,9 +168,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (21).jpeg" alt="STRANGER THINGS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', -1)">-</button>
-                <span id="quantity-stranger-things" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('stranger-things', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 21', -1)">-</button>
+                <span id="quantity-ENG Artist 21" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 21', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 21')">Add to Cart</button>
         </div>
@@ -178,9 +178,9 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (23).jpeg" alt="THE BOYS">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', -1)">-</button>
-                <span id="quantity-the-boys" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('the-boys', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 23', -1)">-</button>
+                <span id="quantity-ENG Artist 23" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 23', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 23')">Add to Cart</button>
         </div>
@@ -188,45 +188,45 @@
         <div class="card">
             <img src="ARTIST/ENG ARTIST (25).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 25', -1)">-</button>
+                <span id="quantity-ENG Artist 25" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 25', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 25')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="ARTIST/ENG ARTIST (26).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 26', -1)">-</button>
+                <span id="quantity-ENG Artist 26" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 26', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 26')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="ARTIST/ENG ARTIST (29).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 29', -1)">-</button>
+                <span id="quantity-ENG Artist 29" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 29', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 29')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="ARTIST/ENG ARTIST (27).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 27', -1)">-</button>
+                <span id="quantity-ENG Artist 27" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 27', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 27')">Add to Cart</button>
         </div>
         <div class="card">
             <img src="ARTIST/ENG ARTIST (3).jpeg" alt="TOKYO DRIFT">
             <div class="cart-controls">
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', -1)">-</button>
-                <span id="quantity-tokyo-drift" style="color: rgb(6, 6, 6);">1</span>
-                <button class="quantity-btn" onclick="updateQuantity('tokyo-drift', 1)">+</button>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 3', -1)">-</button>
+                <span id="quantity-ENG Artist 3" style="color: rgb(6, 6, 6);">1</span>
+                <button class="quantity-btn" onclick="updateQuantity('ENG Artist 3', 1)">+</button>
             </div>
             <button class="add-to-cart" onclick="addToCart('ENG Artist 3')">Add to Cart</button>
         </div>
